--- a/api/.env.example
+++ b/api/.env.example
@@ -1,5 +1,11 @@
-DB_URL=
-DB_NAME=
-DB_USER=
-DB_PASS=
-PORT=
+PORT = 4000
+HOST = '0.0.0.0'
+DB_NAME = "dataServices"
+DB_URL = "http://localhost:8529"
+DB_USER = "root"
+DB_PASS = 'yourpassword'
+NAME =  "repo-discovery"
+SUBSCRIBE_TO = "repos.*.discovery"
+PUBLISH_TO = "repos"
+QUEUE_GROUP = "repo-discovery"
+NATS_URL = "nats://0.0.0.0:4222"
