Fixed docker compose so nats and database are up and running.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,5 @@
 version: '1'
-
 services:
-
   database:
     image: arangodb
     restart: always
@@ -9,25 +7,21 @@ services:
       - 8529:8529
     environment:
       - ARANGO_ROOT_PASSWORD=yourpassword
-    # volumes:
-    #   - arangodb_data_container:/var/lib/arangodb
-      - ./database/db-init.sh:/docker-entrypoint-initdb.d/db-init.sh
 
   nats:
     image: nats:latest
-    ports: 
-      - 4222:4222
+    expose:
+      - "4222"
+    ports:
+      - "8222:8222"
 
   api:
     build: ./api
     ports:
       - 4000:4000
     depends_on:
-      - database
       - nats
-
-volumes:
-  arangodb_data_container:
+      - database
 
 networks:
   default:
