--- a/api/.env.example
+++ b/api/.env.example
@@ -1,11 +1,11 @@
-PORT = 4000
-HOST = '0.0.0.0'
-DB_NAME = "dataServices"
-DB_URL = "http://localhost:8529"
-DB_USER = "root"
-DB_PASS = 'yourpassword'
-NAME =  "repo-discovery"
-SUBSCRIBE_TO = "repos.*.discovery"
-PUBLISH_TO = "repos"
-QUEUE_GROUP = "repo-discovery"
-NATS_URL = "nats://0.0.0.0:4222"
+PORT = 
+HOST = 
+DB_NAME = 
+DB_URL = 
+DB_USER = 
+DB_PASS = 
+NAME =  
+SUBSCRIBE_TO = 
+PUBLISH_TO = 
+QUEUE_GROUP = 
+NATS_URL = 
