--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -4,14 +4,15 @@ ENV NODE_ENV production
 
 WORKDIR /app
 
+RUN apk --no-cache add curl
+
 COPY package*.json ./
 
 RUN npm ci
-# COPY ./.env ./.env.example ./
-COPY . . 
-# COPY ./src ./src
-# COPY ./index.js .
 
-USER node
+# COPY . . 
+COPY ./.env ./.env.example ./
+COPY ./src ./src
+COPY ./index.js .
 
-CMD npm --no-update-notifier start
+CMD ["npm", "--no-update-notifier", "start"]
