--- a/scanners/service-discovery/package.json
+++ b/scanners/service-discovery/package.json
@@ -16,6 +16,8 @@
     "arangojs": "^8.4.0",
     "dotenv": "^16.3.1",
     "fs-extra": "^11.1.1",
+    "graphql": "^16.8.0",
+    "graphql-request": "^6.1.0",
     "js-yaml": "^4.1.0",
     "nats": "^2.16.0",
     "octokit": "^3.1.0",
