--- a/scanners/github-clone-repo/package.json
+++ b/scanners/github-clone-repo/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1",
+    "dotenv-safe": "^8.2.0",
     "fs-extra": "^11.1.1",
     "nats": "^2.16.0",
     "simple-git": "^3.19.1"
