--- a/scanners/github-cloned-gitignore-check/package.json
+++ b/scanners/github-cloned-gitignore-check/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1",
+    "dotenv-safe": "^8.2.0",
     "nats": "^2.16.0"
   }
 }
