--- a/scanners/service-discovery/package.json
+++ b/scanners/service-discovery/package.json
@@ -13,10 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "arangojs": "^8.4.0",
-    "dotenv": "^16.3.1",
+    "arangojs": "^8.4.1",
+    "dotenv-safe": "^8.2.0",
     "fs-extra": "^11.1.1",
-    "graphql": "^16.8.0",
     "graphql-request": "^6.1.0",
     "js-yaml": "^4.1.0",
     "nats": "^2.16.0",
