--- a/scanners/service-url-checks/package.json
+++ b/scanners/service-url-checks/package.json
@@ -13,8 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@axe-core/puppeteer": "^4.8.1",
     "arangojs": "^8.5.0",
     "dotenv-safe": "^8.2.0",
-    "nats": "^2.16.0"
+    "i": "^0.3.7",
+    "nats": "^2.16.0",
+    "npm": "^10.2.1",
+    "puppeteer": "^21.4.1"
   }
 }
