--- a/scanners/web-endpoint-accessibility-checks/package.json
+++ b/scanners/web-endpoint-accessibility-checks/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.1",
     "cheerio": "^1.0.0-rc.12",
     "dotenv-safe": "^8.2.0",
+    "graphql-request": "^6.1.0",
     "i": "^0.3.7",
     "nats": "^2.16.0",
     "npm": "^10.2.1",
