--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -25,15 +25,11 @@ RUN curl -fsSL https://github.com/nats-io/natscli/releases/download/v0.1.1/nats-
     mv nats-0.1.1-linux-amd64/nats /usr/local/bin/nats && \
     rm -r nats-0.1.1-linux-amd64 && rm nats-0.1.1-linux-amd64.zip
 # Install dependencies for Chrome
-RUN sudo apt-get update 
-RUN sudo apt-get install -y libnss3 libnspr4 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdrm2 libxkbcommon0 libxcomposite1 libxdamage1 libxfixes3 libxrandr2 libgbm1 libasound2
-# Install Chrome
-RUN sudo apt-get install -y wget 
-RUN sudo wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb 
-RUN sudo apt-get install -y ./google-chrome-stable_current_amd64.deb 
-    # rm ./google-chrome-stable_current_amd64.deb 
-# Install puppeteer globally
-RUN npm install -g puppeteer
+RUN sudo apt-get update && \
+    sudo apt-get install -y libnss3 libnspr4 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdrm2 libxkbcommon0 libxcomposite1 libxdamage1 libxfixes3 libxrandr2 libgbm1 libasound2
 
 # Start container as non-root user
 USER node
+
+# Install puppeteer globally as node user
+RUN npm install -g puppeteer
