--- a/scanners/github-cloned-repo-checks/Dockerfile
+++ b/scanners/github-cloned-repo-checks/Dockerfile
@@ -8,10 +8,10 @@ RUN apk --no-cache add curl
 RUN apk add --no-cache git
 
 # Install gitleaks
-RUN sudo curl -LO https://github.com/zricethezav/gitleaks/releases/download/v8.18.0/gitleaks_8.18.0_linux_x64.tar.gz && \
-    sudo tar -xzf gitleaks_8.18.0_linux_x64.tar.gz && \
-    sudo mv gitleaks /usr/local/bin && \
-    sudo chmod +x /usr/local/bin/gitleaks && \
+RUN curl -LO https://github.com/zricethezav/gitleaks/releases/download/v8.18.0/gitleaks_8.18.0_linux_x64.tar.gz && \
+    tar -xzf gitleaks_8.18.0_linux_x64.tar.gz && \
+    mv gitleaks /usr/local/bin && \
+    chmod +x /usr/local/bin/gitleaks && \
     rm gitleaks_8.18.0_linux_x64.tar.gz
 
 COPY package*.json ./
