--- a/scanners/web-endpoint/.env.example
+++ b/scanners/web-endpoint/.env.example
@@ -1,2 +1,11 @@
+# NATS_URL=localhost:4222
+# GRAPHQL_URL=http://127.0.0.1:4000/graphql
+
 NATS_URL=localhost:4222
-GRAPHQL_URL=http://127.0.0.1:4000/graphql
+# NATS_URL=nats:4222
+GRAPHQL_URL=http://localhost:4000/graphql
+# GRAPHQL_URL=http://graphql-api:4000/graphql
+
+# NATS sub stream
+# NATS_SUB_STREAM="EventsScanner.githubEndpoints"
+NATS_SUB_STREAM=EventsScanner.githubEndpoints
