--- a/scanners/web-endpoint/.env.example
+++ b/scanners/web-endpoint/.env.example
@@ -1,11 +1,3 @@
-# NATS_URL=localhost:4222
-# GRAPHQL_URL=http://127.0.0.1:4000/graphql
-
-NATS_URL=localhost:4222
-# NATS_URL=nats:4222
-GRAPHQL_URL=http://localhost:4000/graphql
-# GRAPHQL_URL=http://graphql-api:4000/graphql
-
-# NATS sub stream
-# NATS_SUB_STREAM="EventsScanner.githubEndpoints"
-NATS_SUB_STREAM=EventsScanner.githubEndpoints
+NATS_URL=O.0.0.0:4222
+GRAPHQL_URL=0.0.0.0:4000/graphql
+NATS_SUB_STREAM=EventsScanner.webEndpoints
