--- a/ui/package.json
+++ b/ui/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/themes": "^3.0.3",
     "express": "^4.19.2",
     "graphql": "^16.8.1",
+    "jsdom": "^25.0.0",
     "os": "^0.1.2",
     "path": "^0.12.7",
     "react": "^18.3.1",
