--- a/graph-updater/package.json
+++ b/graph-updater/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv-safe": "^8.2.0",
+    "glob": "^10.4.5",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
     "js-yaml": "^4.1.0",
