--- a/graph-updater/Dockerfile
+++ b/graph-updater/Dockerfile
@@ -5,6 +5,7 @@ ENV NODE_ENV production
 WORKDIR /app
 
 #RUN apk --no-cache add curl=8.5.0-r0
+RUN apk add --no-cache git curl
 
 COPY package*.json ./
 
