--- a/graph-updater/package.json
+++ b/graph-updater/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "dotenv-safe": "^8.2.0",
+    "fs-extra": "^11.2.0",
     "glob": "^10.4.5",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
     "js-yaml": "^4.1.0",
     "nats": "^2.16.0",
-    "octokit": "3.1.2"
+    "octokit": "3.1.2",
+    "simple-git": "^3.27.0"
   },
   "type": "module"
 }
